Horizontal scroll fix

--- a/components/WhyWe/WhyWe.module.css
+++ b/components/WhyWe/WhyWe.module.css
@@ -1,4 +1,4 @@
-.paralaxContainer :global  {
+/* .paralaxContainer :global  {
     position: unset !important;
     overflow: visible !important;
     margin: 100px auto 220px auto;
@@ -8,4 +8,14 @@
     object-fit: cover !important;
     width: 100vw !important;
 } 
+ */
 
+
+ .paralaxContainer {
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+ }
